--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "homepage": "https://jirengu-inc.github.io/project-react-1/build"
+    "homepage": "https://jirengu-inc.github.io/build/build"
   }
 }
