--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "webpack-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jirenguliuk.github.io/bundle/build",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10",
-    "homepage": "https://jirenguliuk.github.io/bundle/build"
+    "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
